fix(v1.2.0):修复和添加qos2的消息处理逻辑